<resources>
    <string name="app_name">PlaninarijumX</string>

    <string name="title_activity_registration">Registracija</string>
    <string name="kor_ime1">Korisničko ime</string>
    <string name="loz1">Lozinka</string>
    <string name="prijava">Prijava</string>
    <string name="reg">Registracija</string>
    <string name="ime">Ime:</string>
    <string name="prezime">Prezime:</string>
    <string name="kor_ime">Korisničko ime:</string>
    <string name="loz">Lozinka:</string>
    <string name="br_tel">Broj telefona:</string>
    <string name="slika">Dodaj sliku</string>
    <string name="title_activity_main">Planine</string>
    <string name="det_uredjaji">Pronađi uređaje</string>
    <string name="title_activity_bluetooth">Prijatelji</string>
    <string name="brtelefona">Broj telefona:</string>
    <string name="logout">Odjava</string>
    <string name="profil">Profil</string>
    <string name="poeni">Poeni:</string>
    <string name="rang">Rang:</string>
    <string name="friendd">Dodaj prijatelja</string>
    <string name="friends">Prijatelja</string>
    <string name="zavrseniQ">Završeni kvizovi:</string>
    <string name="zapocetiQ">Započeti kvizovi:</string>
    <string name="kvizovi">Kvizovi</string>
    <string name="vidljiv">Vidljiv</string>
    <string name="ranglista">Rang lista</string>
    <string name="currang">Trenutni rang:</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_mapa">Mapa</string>
    <string name="title_activity_map">Map Activity</string>

    <string name="title_section1">Prikaži moju lokaciju</string>
    <string name="title_section2">Mesta u blizini</string>
    <string name="title_section3">Prikazi prijatelje</string>
    <string name="title_section4">Dodaj kviz</string>
    <string name="title_section5">Reši kviz</string>
    <string name="empty_space">Popuni prazna mesta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_friend_request">Prijateljstvo</string>
    <string name="add_place">Dodaj mesto</string>
    <string name="Done">Završi</string>
    <string name="question">pitanje</string>
    <string name="answer">Odgovor</string>
    <string name="start_solving">Počni kviz</string>
    <string name="title_activity_my_profile">Moj profil</string>
    <string name="title_activity_friends_list">Prijatelji</string>
    <string name="title_activity_planina">PlaninaActivity</string>
    <string name="title_activity_quests">Kvizovi</string>
    <string name="title_activity_ranking">Rang lista</string>
    <string name="ask_friend">Pitaj prijatelja</string>
    <string name="finish">Cilj</string>
    <string name="cant_start_quest">Ne možes pokrenuti kviz koji si kreirao</string>
</resources>
