<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rs.elfak.mosis.planinarijumx.MainActivity">

    <item android:id="@+id/profil"  android:title="@string/profil"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/mapa"  android:title="@string/action_mapa"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/bluetooth"  android:title="@string/title_activity_bluetooth"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/logout"  android:title="@string/logout"
        android:orderInCategory="100" app:showAsAction="ifRoom" />

</menu>
